force-app/main/default/objects/Company_Domain__c/Company_Domain__c.object-meta.xml
<CustomObject>
    <label>Company Domain</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Company Domain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>