force-app/main/default/objects/Company_Domain__c/validationRules/Domain_Must_Contain_Suffix.validationRule-meta.xml
<ValidationRule>
    <fullName>Domain_Must_Contain_Suffix</fullName>
    <active>true</active>
    <description>Ensures Domain__c contains a . and does not end with a .. If this validation rule triggers, the domain is not complete.</description>
    <errorConditionFormula>NOT(CONTAINS(Domain__c, &apos;.&apos;))  ||  RIGHT( Domain__c , 1) = &apos;.&apos;</errorConditionFormula>
    <errorMessage>Please ensure your domain is complete with a suffix such as .com</errorMessage>
</ValidationRule>